--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
-
-streamlit==1.24.0
+streamlit
+sentence-transformers
+PyMuPDF
+chromadb
+langchain-classic
+pandas
+matplotlib
+seaborn
+openai
+requests
+openpyxl
